Add note resources to SpecOps MVP API
